--- a/package.json
+++ b/package.json
@@ -5,10 +5,34 @@
   "license": "UNLICENSED",
   "version": "0.0.0-placeholder",
   "type": "module",
-  "scripts": {},
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "check": "svelte-check --tsconfig ./tsconfig.json"
+  },
   "devDependencies": {
+    "@sveltejs/vite-plugin-svelte": "^2.0.2",
+    "@tailwindcss/typography": "^0.5.8",
+    "@tsconfig/svelte": "^3.0.0",
     "@types/node": "^18.11.18",
+    "autoprefixer": "^10.4.13",
+    "daisyui": "^2.46.1",
+    "eslint": "^8.31.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-simple-import-sort": "^8.0.0",
+    "eslint-plugin-svelte3": "^4.0.0",
     "nerdbank-gitversioning": "3.6.65-alpha",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.20",
+    "postcss-load-config": "^4.0.1",
+    "svelte": "^3.55.0",
+    "svelte-check": "^3.0.1",
+    "svelte-preprocess": "^5.0.0",
+    "tailwindcss": "^3.2.4",
+    "tslib": "^2.4.1",
+    "typescript": "^4.9.4",
+    "vite": "^4.0.4",
+    "vite-plugin-ssr": "^0.4.69"
   }
 }
