--- a/package.json
+++ b/package.json
@@ -8,17 +8,27 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:ssr": "vite build --ssr",
     "preview": "vite preview",
-    "check": "svelte-check --tsconfig ./tsconfig.json"
+    "clean": "rimraf dist"
+  },
+  "imports": {
+    "#root/*": "./*",
+    "#src/*": "./src/*",
+    "#lib/*": "./src/lib/*",
+    "#types": "./src/types/types"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^2.0.2",
     "@tailwindcss/typography": "^0.5.8",
     "@tsconfig/svelte": "^3.0.0",
     "@types/node": "^18.11.18",
+    "@typescript-eslint/eslint-plugin": "^5.48.0",
+    "@typescript-eslint/parser": "^5.48.0",
     "autoprefixer": "^10.4.13",
     "daisyui": "^2.46.1",
     "eslint": "^8.31.0",
+    "eslint-import-resolver-typescript": "^3.5.2",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "eslint-plugin-svelte3": "^4.0.0",
@@ -26,13 +36,18 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.20",
     "postcss-load-config": "^4.0.1",
+    "rimraf": "^3.0.2",
     "svelte": "^3.55.0",
-    "svelte-check": "^3.0.1",
     "svelte-preprocess": "^5.0.0",
     "tailwindcss": "^3.2.4",
+    "ts-node": "^10.9.1",
     "tslib": "^2.4.1",
     "typescript": "^4.9.4",
     "vite": "^4.0.4",
     "vite-plugin-ssr": "^0.4.69"
+  },
+  "dependencies": {
+    "@abraham/reflection": "^0.11.0",
+    "inversify": "^6.0.1"
   }
 }
