--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "#types": "./src/types/types"
   },
   "devDependencies": {
+    "@mdx-js/mdx": "^2.2.1",
     "@sveltejs/vite-plugin-svelte": "^2.0.2",
     "@tailwindcss/typography": "^0.5.8",
     "@tsconfig/svelte": "^3.0.0",
@@ -43,11 +44,14 @@
     "ts-node": "^10.9.1",
     "tslib": "^2.4.1",
     "typescript": "^4.9.4",
+    "vfile": "^5.3.6",
+    "vfile-matter": "^4.0.0",
     "vite": "^4.0.4",
     "vite-plugin-ssr": "^0.4.69"
   },
   "dependencies": {
     "@abraham/reflection": "^0.11.0",
-    "inversify": "^6.0.1"
+    "inversify": "^6.0.1",
+    "only-jsx": "^0.1.1"
   }
 }
