--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,7 +3,6 @@
     "dbaeumer.vscode-eslint",
     "bradlc.vscode-tailwindcss",
     "unifiedjs.vscode-mdx",
-    "svelte.svelte-vscode",
-    "mramericanmike.sveltesnippets"
+    "solidjs-community.solid-snippets"
   ]
 }
