--- a/package.json
+++ b/package.json
@@ -20,26 +20,22 @@
   },
   "devDependencies": {
     "@mdx-js/mdx": "^2.2.1",
-    "@sveltejs/vite-plugin-svelte": "^2.0.2",
-    "@tailwindcss/typography": "^0.5.8",
-    "@tsconfig/svelte": "^3.0.0",
+    "@tailwindcss/typography": "^0.5.9",
     "@types/node": "^18.11.18",
-    "@typescript-eslint/eslint-plugin": "^5.48.0",
-    "@typescript-eslint/parser": "^5.48.0",
+    "@typescript-eslint/eslint-plugin": "^5.48.1",
+    "@typescript-eslint/parser": "^5.48.1",
     "autoprefixer": "^10.4.13",
     "daisyui": "^2.46.1",
     "eslint": "^8.31.0",
-    "eslint-import-resolver-typescript": "^3.5.2",
-    "eslint-plugin-import": "^2.26.0",
+    "eslint-import-resolver-typescript": "^3.5.3",
+    "eslint-plugin-import": "^2.27.4",
     "eslint-plugin-simple-import-sort": "^8.0.0",
-    "eslint-plugin-svelte3": "^4.0.0",
     "nerdbank-gitversioning": "3.6.65-alpha",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.20",
+    "postcss": "^8.4.21",
     "postcss-load-config": "^4.0.1",
     "rimraf": "^3.0.2",
-    "svelte": "^3.55.0",
-    "svelte-preprocess": "^5.0.0",
+    "solid-jsx": "^0.9.1",
     "tailwindcss": "^3.2.4",
     "ts-node": "^10.9.1",
     "tslib": "^2.4.1",
@@ -47,11 +43,12 @@
     "vfile": "^5.3.6",
     "vfile-matter": "^4.0.0",
     "vite": "^4.0.4",
+    "vite-plugin-solid": "^2.5.0",
     "vite-plugin-ssr": "^0.4.69"
   },
   "dependencies": {
     "@abraham/reflection": "^0.11.0",
     "inversify": "^6.0.1",
-    "only-jsx": "^0.1.1"
+    "solid-js": "^1.6.8"
   }
 }
