--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -39,8 +39,12 @@ rules:
   import/no-restricted-paths:
     - error
     - zones:
+        # imports with 'from #server/' allowed only for lib code inside server/ dir
         - target: "./src/lib/!(server)/**/*"
           from: "./src/lib/server"
+        # #shared code can't import code 'from #client'/'from #server'
+        - target: "./src/lib/shared"
+          from: ["./src/lib/server", "./src/lib/client"]
 settings:
   import/resolver:
     # You will also need to install and configure the TypeScript resolver
