--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
   "type": "module",
   "scripts": {
     "dev": "npm-run-all --parallel dev:*",
-    "dev:vite": "vite dev",
+    "dev:vite": "cross-env servedUrl=http://localhost:3000/some/ vite dev",
     "dev:i18n": "typesafe-i18n",
     "build": "vite build",
     "preview": "vite preview",
     "clean": "rimraf dist",
     "lint": "eslint .",
-    "test:unit": "cross-env NODE_OPTIONS='--no-warnings' vitest",
+    "test": "cross-env NODE_OPTIONS='--no-warnings' vitest run",
+    "test:watch": "cross-env NODE_OPTIONS='--no-warnings' vitest",
     "test:ui": "cross-env NODE_OPTIONS='--no-warnings' vitest --ui",
     "test:update": "cross-env NODE_OPTIONS='--no-warnings' vitest --update"
   },
@@ -28,20 +29,24 @@
   },
   "devDependencies": {
     "@mdx-js/mdx": "^2.2.1",
+    "@solidjs/testing-library": "^0.6.0",
     "@tailwindcss/typography": "^0.5.9",
+    "@testing-library/jest-dom": "^5.16.5",
     "@types/node": "^18.11.18",
     "@types/object-hash": "^3.0.2",
     "@types/prismjs": "^1.26.0",
-    "@typescript-eslint/eslint-plugin": "^5.48.1",
-    "@typescript-eslint/parser": "^5.48.1",
-    "@vitest/ui": "^0.27.1",
+    "@types/testing-library__jest-dom": "^5.14.5",
+    "@typescript-eslint/eslint-plugin": "^5.48.2",
+    "@typescript-eslint/parser": "^5.48.2",
+    "@vitest/ui": "^0.27.2",
     "autoprefixer": "^10.4.13",
     "cross-env": "^7.0.3",
-    "daisyui": "^2.46.1",
-    "eslint": "^8.31.0",
+    "daisyui": "^2.47.0",
+    "eslint": "^8.32.0",
     "eslint-import-resolver-typescript": "^3.5.3",
-    "eslint-plugin-import": "^2.27.4",
-    "eslint-plugin-simple-import-sort": "^8.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-simple-import-sort": "^9.0.0",
+    "happy-dom": "^8.1.5",
     "nerdbank-gitversioning": "3.6.65-alpha",
     "npm-run-all": "^4.1.5",
     "object-hash": "^3.0.0",
@@ -53,7 +58,8 @@
     "rehype-stringify": "^9.0.3",
     "remark-copy-linked-files": "github:joostdecock/remark-copy-linked-files",
     "remark-gfm": "^3.0.1",
-    "rimraf": "^4.0.4",
+    "rimraf": "^4.1.1",
+    "solid-refresh": "0.4.1",
     "tailwindcss": "^3.2.4",
     "ts-node": "^10.9.1",
     "tslib": "^2.4.1",
@@ -62,8 +68,8 @@
     "vfile-matter": "^4.0.0",
     "vite": "^4.0.4",
     "vite-plugin-solid": "^2.5.0",
-    "vite-plugin-ssr": "^0.4.69",
-    "vitest": "^0.27.1",
+    "vite-plugin-ssr": "^0.4.71",
+    "vitest": "^0.27.2",
     "yaml": "^2.2.1"
   },
   "dependencies": {
@@ -73,6 +79,12 @@
     "prismjs": "^1.29.0",
     "solid-js": "^1.6.9",
     "solid-jsx": "^0.9.1",
-    "typesafe-i18n": "^5.18.1"
+    "typesafe-i18n": "^5.20.0"
+  },
+  "comment_01": "waiting for https://github.com/solidjs/solid-refresh/pull/30",
+  "pnpm": {
+    "overrides": {
+      "solid-refresh": "$solid-refresh"
+    }
   }
 }
