tests: some container+ render infrastructure

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,15 +4,18 @@
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
-  {
-    "name": "Node: Attach",
-    "processId": "${command:PickProcess}",
-    "request": "attach",
-    "skipFiles": [
-      "<node_internals>/**"
-    ],
-    "type": "node"
-  },
+    {
+      "name": "Node: Attach",
+      "processId": "${command:PickProcess}",
+      "request": "attach",
+      "skipFiles": [
+        "<node_internals>/**"
+      ],
+      "env": {
+        "NODE_OPTIONS": "--no-warnings"
+      },
+      "type": "node"
+    },
     {
       "name": "Edge",
       "type": "msedge",
