--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -49,6 +49,12 @@ rules:
         # src code can't import code 'from #tests/'
         - target: "./src"
           from: ["./tests"]
+        # code can't import code 'from #client/hooks/*', use index.ts exports
+        - target: "./src/lib/client/!(hooks)/**/*"
+          from: ["./src/lib/client/hooks/!(index.ts)"]
+        # code can't import code 'from #shared/utils/*', use index.ts exports
+        - target: "./src/lib/shared/!(utils)/**/*"
+          from: ["./src/lib/shared/utils/!(index.ts)"]
 settings:
   import/resolver:
     # You will also need to install and configure the TypeScript resolver
