--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -3,11 +3,13 @@ parser: "@typescript-eslint/parser"
 plugins:
   - "@typescript-eslint"
   - simple-import-sort
+  - unicorn
 extends:
   - eslint:recommended
   - plugin:import/recommended
   - plugin:import/typescript
   - plugin:@typescript-eslint/recommended
+  - plugin:unicorn/recommended
 rules:
   quotes:
     - error
@@ -32,6 +34,18 @@ rules:
     - warn
     - varsIgnorePattern: ^_
       argsIgnorePattern: ^_
+  unicorn/prefer-query-selector: "off"
+  # conflicts with vscode default formatter
+  unicorn/empty-brace-spaces: "off"
+  unicorn/prevent-abbreviations:
+    - error
+    - extendDefaultReplacements: false
+      replacements:
+        cmd:
+          command: true
+        e:
+          event: true
+
   simple-import-sort/imports:
     - error
   import/no-extraneous-dependencies:
