--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint-import-resolver-typescript": "^3.5.3",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-simple-import-sort": "^9.0.0",
+    "eslint-plugin-unicorn": "^45.0.2",
     "happy-dom": "^8.1.5",
     "nerdbank-gitversioning": "3.6.65-alpha",
     "npm-run-all": "^4.1.5",
