--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -4,12 +4,14 @@ plugins:
   - "@typescript-eslint"
   - simple-import-sort
   - unicorn
+  - solid
 extends:
   - eslint:recommended
   - plugin:import/recommended
   - plugin:import/typescript
   - plugin:@typescript-eslint/recommended
   - plugin:unicorn/recommended
+  - plugin:solid/typescript
 rules:
   quotes:
     - error
@@ -37,6 +39,9 @@ rules:
   unicorn/prefer-query-selector: "off"
   # conflicts with vscode default formatter
   unicorn/empty-brace-spaces: "off"
+  unicorn/filename-case:
+    - error
+    - case: kebabCase
   unicorn/prevent-abbreviations:
     - error
     - extendDefaultReplacements: false
