--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -123,7 +123,9 @@
     "resvg",
     "sergioramos",
     "singleline",
+    "solidjs",
     "sveltekit",
+    "testid",
     "twrnc",
     "typesafe",
     "unist",
