refactor: delete client-side mdx rendering, add server-side mdx rendering

--- a/package.json
+++ b/package.json
@@ -29,16 +29,18 @@
   },
   "devDependencies": {
     "@mdx-js/mdx": "^2.2.1",
+    "@mdx-js/rollup": "^2.2.1",
     "@solidjs/testing-library": "^0.6.0",
     "@tailwindcss/typography": "^0.5.9",
     "@testing-library/jest-dom": "^5.16.5",
+    "@types/mdx": "^2.0.3",
     "@types/node": "^18.11.18",
     "@types/object-hash": "^3.0.2",
     "@types/prismjs": "^1.26.0",
     "@types/testing-library__jest-dom": "^5.14.5",
-    "@typescript-eslint/eslint-plugin": "^5.48.2",
-    "@typescript-eslint/parser": "^5.48.2",
-    "@vitest/ui": "^0.27.3",
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/parser": "^5.49.0",
+    "@vitest/ui": "^0.28.1",
     "autoprefixer": "^10.4.13",
     "cross-env": "^7.0.3",
     "daisyui": "^2.47.0",
@@ -60,8 +62,7 @@
     "rehype-stringify": "^9.0.3",
     "remark-copy-linked-files": "github:joostdecock/remark-copy-linked-files",
     "remark-gfm": "^3.0.1",
-    "rimraf": "^4.1.1",
-    "solid-refresh": "0.4.1",
+    "rimraf": "^4.1.2",
     "tailwindcss": "^3.2.4",
     "ts-node": "^10.9.1",
     "tslib": "^2.4.1",
@@ -71,7 +72,7 @@
     "vite": "^4.0.4",
     "vite-plugin-solid": "^2.5.0",
     "vite-plugin-ssr": "^0.4.71",
-    "vitest": "^0.27.3",
+    "vitest": "^0.28.1",
     "yaml": "^2.2.1"
   },
   "dependencies": {
@@ -82,11 +83,5 @@
     "solid-js": "^1.6.9",
     "solid-jsx": "^0.9.1",
     "typesafe-i18n": "^5.20.0"
-  },
-  "comment_01": "waiting for https://github.com/solidjs/solid-refresh/pull/30",
-  "pnpm": {
-    "overrides": {
-      "solid-refresh": "$solid-refresh"
-    }
   }
 }
