--- a/.npmrc
+++ b/.npmrc
@@ -4,5 +4,6 @@ audit-level=critical
 update-notifier=false
 yes=true
 engine-strict=true
+auto-install-peers=false
 # just in case a private registry is configured in ~/.npmrc
 registry = https://registry.npmjs.org/
