--- a/package.json
+++ b/package.json
@@ -40,14 +40,14 @@
     "@types/testing-library__jest-dom": "^5.14.5",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
-    "@vitest/ui": "^0.28.1",
+    "@vitest/ui": "^0.28.3",
     "autoprefixer": "^10.4.13",
     "cross-env": "^7.0.3",
-    "daisyui": "^2.47.0",
+    "daisyui": "^2.49.0",
     "eslint": "^8.32.0",
     "eslint-import-resolver-typescript": "^3.5.3",
     "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-simple-import-sort": "^9.0.0",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-solid": "^0.9.3",
     "eslint-plugin-unicorn": "^45.0.2",
     "happy-dom": "^8.1.5",
@@ -57,23 +57,23 @@
     "postcss": "^8.4.21",
     "refractor": "^4.8.0",
     "rehype-autolink-headings": "^6.1.1",
+    "rehype-external-links": "^2.0.1",
     "rehype-prism-plus": "^1.5.0",
     "rehype-slug": "^5.1.0",
     "rehype-stringify": "^9.0.3",
     "remark-copy-linked-files": "github:joostdecock/remark-copy-linked-files",
+    "remark-frontmatter": "^4.0.1",
     "remark-gfm": "^3.0.1",
+    "remark-mdx-frontmatter": "^2.1.1",
     "rimraf": "^4.1.2",
     "tailwindcss": "^3.2.4",
     "ts-node": "^10.9.1",
-    "tslib": "^2.4.1",
+    "tslib": "^2.5.0",
     "typescript": "^4.9.4",
-    "vfile": "^5.3.6",
-    "vfile-matter": "^4.0.0",
     "vite": "^4.0.4",
     "vite-plugin-solid": "^2.5.0",
     "vite-plugin-ssr": "^0.4.71",
-    "vitest": "^0.28.1",
-    "yaml": "^2.2.1"
+    "vitest": "^0.28.3"
   },
   "dependencies": {
     "@abraham/reflection": "^0.11.0",
@@ -83,5 +83,12 @@
     "solid-js": "^1.6.9",
     "solid-jsx": "^0.9.1",
     "typesafe-i18n": "^5.20.0"
+  },
+  "pnpm": {
+    "peerDependencyRules": {
+      "ignoreMissing": [
+        "rollup"
+      ]
+    }
   }
 }
