--- a/package.json
+++ b/package.json
@@ -48,9 +48,9 @@
     "eslint-import-resolver-typescript": "^3.5.3",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "eslint-plugin-solid": "^0.9.3",
+    "eslint-plugin-solid": "^0.9.4",
     "eslint-plugin-unicorn": "^45.0.2",
-    "happy-dom": "^8.1.5",
+    "happy-dom": "^8.2.0",
     "nerdbank-gitversioning": "3.6.65-alpha",
     "npm-run-all": "^4.1.5",
     "object-hash": "^3.0.0",
@@ -77,6 +77,8 @@
   },
   "dependencies": {
     "@abraham/reflection": "^0.11.0",
+    "@solid-primitives/script-loader": "^1.1.3",
+    "@solidjs/meta": "^0.28.2",
     "cancellationtoken": "^2.2.0",
     "inversify": "^6.0.1",
     "prismjs": "^1.29.0",
