--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
   },
   "dependencies": {
     "@abraham/reflection": "^0.11.0",
+    "@solid-primitives/media": "^2.0.6",
     "@solid-primitives/script-loader": "^1.1.3",
     "@solidjs/meta": "^0.28.2",
     "cancellationtoken": "^2.2.0",
