--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -63,21 +63,30 @@ rules:
   import/no-restricted-paths:
     - error
     - zones:
-        # imports with 'from #server/' allowed only for lib code inside server/ dir
-        - target: "./src/lib/!(server)/**/*"
-          from: "./src/lib/server"
-        # #shared code can't import code 'from #client'/'from #server'
-        - target: "./src/lib/shared"
+        - message: non-server code can't refer to the server code
+          from: ./src/lib/server
+          target: ./src/lib/!(server)/**/*
+
+        - message: shared code can't refer to client or server code
           from: ["./src/lib/server", "./src/lib/client"]
-        # src code can't import code 'from #tests/'
-        - target: "./src"
+          target: ./src/lib/shared
+
+        - message: code can't refer to tests code
           from: ["./tests"]
-        # code can't import code 'from #client/hooks/*', use index.ts exports
-        - target: "./src/lib/client/!(hooks)/**/*"
-          from: ["./src/lib/client/hooks/!(index.ts)"]
-        # code can't import code 'from #shared/utils/*', use index.ts exports
-        - target: "./src/lib/*/!(utils)/**/*"
+          target: "./src"
+
+        - message: "can't import code 'from #client/hooks/*' directly, use index.ts exports"
+          from: ["./src/lib/client/hooks/!(index).{ts,tsx}"]
+          target: "./src/lib/client/!(hooks)/**/*"
+
+        - message: "can't import code 'from #shared/utils/*' directly, use index.ts exports"
           from: ["./src/lib/*/utils/!(index.ts)"]
+          target: "./src/lib/*/!(utils)/**/*"
+
+        - message: "can't import internal code, use index.ts exports first"
+          from: "./src/lib/**/*.internal.{tsx,ts}"
+          target: ["./src/lib/**/!(index).{ts,tsx}"]
+
 settings:
   import/resolver:
     # You will also need to install and configure the TypeScript resolver
