--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@types/testing-library__jest-dom": "^5.14.5",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "@typescript-eslint/parser": "^5.50.0",
-    "@vitest/ui": "^0.28.3",
+    "@vitest/ui": "^0.28.4",
     "autoprefixer": "^10.4.13",
     "cross-env": "^7.0.3",
     "daisyui": "^2.50.0",
@@ -50,7 +50,7 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-solid": "^0.9.4",
     "eslint-plugin-unicorn": "^45.0.2",
-    "happy-dom": "^8.2.2",
+    "happy-dom": "^8.2.6",
     "nerdbank-gitversioning": "3.6.65-alpha",
     "npm-run-all": "^4.1.5",
     "object-hash": "^3.0.0",
@@ -70,10 +70,10 @@
     "ts-node": "^10.9.1",
     "tslib": "^2.5.0",
     "typescript": "^4.9.5",
-    "vite": "^4.0.4",
+    "vite": "^4.1.1",
     "vite-plugin-solid": "^2.5.0",
-    "vite-plugin-ssr": "^0.4.73",
-    "vitest": "^0.28.3"
+    "vite-plugin-ssr": "^0.4.75",
+    "vitest": "^0.28.4"
   },
   "dependencies": {
     "@abraham/reflection": "^0.11.0",
@@ -85,7 +85,8 @@
     "prismjs": "^1.29.0",
     "solid-js": "^1.6.10",
     "solid-jsx": "^0.9.1",
-    "typesafe-i18n": "^5.21.0"
+    "typesafe-i18n": "^5.21.0",
+    "yaml": "^2.2.1"
   },
   "pnpm": {
     "peerDependencyRules": {
