--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -95,9 +95,11 @@
     "daisyui",
     "esbuild",
     "execa",
+    "extnames",
     "frontmatter",
     "gitversioning",
     "inversify",
+    "joostdecock",
     "languagedetector",
     "ldjson",
     "mdast",
@@ -111,6 +113,7 @@
     "noreferrer",
     "opengraph",
     "Parens",
+    "pluginutils",
     "Preact",
     "precompress",
     "predev",
