--- a/package.json
+++ b/package.json
@@ -28,18 +28,18 @@
     "#root/*": "./*"
   },
   "devDependencies": {
-    "@mdx-js/mdx": "^2.2.1",
-    "@mdx-js/rollup": "^2.2.1",
-    "@solidjs/testing-library": "^0.6.0",
+    "@mdx-js/mdx": "^2.3.0",
+    "@rollup/pluginutils": "^5.0.2",
+    "@solidjs/testing-library": "^0.6.1",
     "@tailwindcss/typography": "^0.5.9",
     "@testing-library/jest-dom": "^5.16.5",
     "@types/mdx": "^2.0.3",
-    "@types/node": "^18.11.18",
+    "@types/node": "^18.13.0",
     "@types/object-hash": "^3.0.2",
     "@types/prismjs": "^1.26.0",
     "@types/testing-library__jest-dom": "^5.14.5",
-    "@typescript-eslint/eslint-plugin": "^5.50.0",
-    "@typescript-eslint/parser": "^5.50.0",
+    "@typescript-eslint/eslint-plugin": "^5.51.0",
+    "@typescript-eslint/parser": "^5.51.0",
     "@vitest/ui": "^0.28.4",
     "autoprefixer": "^10.4.13",
     "cross-env": "^7.0.3",
@@ -58,34 +58,33 @@
     "refractor": "^4.8.0",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-external-links": "^2.0.1",
-    "rehype-prism-plus": "^1.5.0",
+    "rehype-prism-plus": "^1.5.1",
     "rehype-slug": "^5.1.0",
     "rehype-stringify": "^9.0.3",
     "remark-copy-linked-files": "github:joostdecock/remark-copy-linked-files",
-    "remark-frontmatter": "^4.0.1",
     "remark-gfm": "^3.0.1",
-    "remark-mdx-frontmatter": "^2.1.1",
     "rimraf": "^4.1.2",
-    "tailwindcss": "^3.2.4",
+    "tailwindcss": "^3.2.6",
     "ts-node": "^10.9.1",
     "tslib": "^2.5.0",
     "typescript": "^4.9.5",
+    "vfile": "^5.3.7",
+    "vfile-matter": "^4.0.1",
     "vite": "^4.1.1",
     "vite-plugin-solid": "^2.5.0",
-    "vite-plugin-ssr": "^0.4.75",
+    "vite-plugin-ssr": "0.4.77",
     "vitest": "^0.28.4"
   },
   "dependencies": {
-    "@abraham/reflection": "^0.11.0",
+    "@abraham/reflection": "^0.12.0",
     "@solid-primitives/media": "^2.0.6",
     "@solid-primitives/script-loader": "^2.0.0",
     "@solidjs/meta": "^0.28.2",
-    "cancellationtoken": "^2.2.0",
     "inversify": "^6.0.1",
     "prismjs": "^1.29.0",
     "solid-js": "^1.6.10",
     "solid-jsx": "^0.9.1",
-    "typesafe-i18n": "^5.21.0",
+    "typesafe-i18n": "5.24.0",
     "yaml": "^2.2.1"
   },
   "pnpm": {
