--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -8,6 +8,7 @@
   },
   "include": [
     "vite.config.ts",
+    "build/",
     "src/lib/shared/i18n/i18n-util.ts",
     "src/lib/shared/i18n/i18n-types.ts",
     "src/lib/server/content/blog/posts/create-compile-options.ts"
