--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "@mdx-js/mdx": "^2.3.0",
+    "@resvg/resvg-js": "^2.4.0",
     "@rollup/pluginutils": "^5.0.2",
     "@solidjs/testing-library": "^0.6.1",
     "@tailwindcss/typography": "^0.5.9",
@@ -64,6 +65,7 @@
     "remark-copy-linked-files": "github:joostdecock/remark-copy-linked-files",
     "remark-gfm": "^3.0.1",
     "rimraf": "^4.1.2",
+    "satori": "^0.2.3",
     "tailwindcss": "^3.2.6",
     "ts-node": "^10.9.1",
     "tslib": "^2.5.0",
