--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
     "remark-copy-linked-files": "github:joostdecock/remark-copy-linked-files",
     "remark-gfm": "^3.0.1",
     "rimraf": "^4.1.2",
-    "satori": "^0.2.3",
+    "satori": "^0.2.5",
+    "satori-html": "^0.3.2",
     "tailwindcss": "^3.2.6",
     "ts-node": "^10.9.1",
     "tslib": "^2.5.0",
