--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
     "composite": true,
-    "module": "ESNext",
+    "module": "esnext",
+    "target": "ES2022",
     "moduleResolution": "Node",
     "esModuleInterop": true,
     "moduleDetection": "auto",
