wip: closer to release

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -94,5 +94,6 @@
     "transpileOnly": true,
     "experimentalResolver": true,
     "experimentalSpecifierResolution": "node",
+    "swc": false
   }
 }
