--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   "type": "module",
   "scripts": {
     "dev": "npm-run-all --parallel dev:*",
-    "dev:vite": "cross-env servedUrl=http://localhost:3000/some/ vite dev",
+    "dev:vite": "cross-env servedUrl=http://localhost:3000/ vite dev",
     "dev:i18n": "typesafe-i18n",
     "build": "vite build",
+    "build:prerender": "cross-env NODE_OPTIONS='--no-warnings' node build/prerender.js",
     "preview": "vite preview",
     "clean": "rimraf dist",
     "lint": "eslint .",
@@ -35,7 +36,7 @@
     "@tailwindcss/typography": "^0.5.9",
     "@testing-library/jest-dom": "^5.16.5",
     "@types/mdx": "^2.0.3",
-    "@types/node": "^18.13.0",
+    "@types/node": "^18.14.0",
     "@types/object-hash": "^3.0.2",
     "@types/prismjs": "^1.26.0",
     "@types/testing-library__jest-dom": "^5.14.5",
@@ -51,7 +52,7 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-solid": "^0.9.4",
     "eslint-plugin-unicorn": "^45.0.2",
-    "happy-dom": "^8.4.0",
+    "happy-dom": "^8.6.0",
     "nerdbank-gitversioning": "3.6.65-alpha",
     "npm-run-all": "^4.1.5",
     "object-hash": "^3.0.0",
@@ -65,17 +66,17 @@
     "remark-copy-linked-files": "github:joostdecock/remark-copy-linked-files",
     "remark-gfm": "^3.0.1",
     "rimraf": "^4.1.2",
-    "satori": "^0.3.1",
+    "satori": "^0.3.2",
     "satori-html": "^0.3.2",
-    "tailwindcss": "^3.2.6",
+    "tailwindcss": "^3.2.7",
     "ts-node": "^10.9.1",
     "tslib": "^2.5.0",
     "typescript": "^4.9.5",
     "vfile": "^5.3.7",
     "vfile-matter": "^4.0.1",
-    "vite": "^4.1.1",
+    "vite": "^4.1.2",
     "vite-plugin-solid": "^2.5.0",
-    "vite-plugin-ssr": "0.4.82",
+    "vite-plugin-ssr": "0.4.85",
     "vitest": "^0.28.5"
   },
   "dependencies": {
