--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "dev": "npm-run-all --parallel dev:*",
     "dev:vite": "cross-env servedUrl=http://localhost:3000/ vite dev",
     "dev:i18n": "typesafe-i18n",
-    "build": "vite build",
+    "build": "run-p -s build:**",
+    "build:vite": "vite build",
+    "build:stork": "cross-env NODE_OPTIONS='--no-warnings' ts-node build/build-search-indexes.ts",
     "preview": "vite preview",
     "clean": "rimraf dist",
     "lint": "eslint .",
@@ -49,8 +51,9 @@
     "eslint-import-resolver-typescript": "^3.5.3",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "eslint-plugin-solid": "^0.9.4",
+    "eslint-plugin-solid": "^0.10.0",
     "eslint-plugin-unicorn": "^45.0.2",
+    "execa": "^7.0.0",
     "happy-dom": "^8.6.0",
     "nerdbank-gitversioning": "3.6.65-alpha",
     "npm-run-all": "^4.1.5",
